// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.core;

import "chromiumos/config/api/topology.proto";
import "device/config.proto";

option go_package = "chromiumos/tast/internal/protocol";

// Features represents a set of features available for tests.
message Features {
  // CheckDeps indicates whether to skip tests whose dependencies are not
  // satisfied by available features.
  bool check_deps = 5;

  SoftwareFeatures software = 1;
  HardwareFeatures hardware = 2;
  map<string, string> vars = 3;
  string maybe_missing_vars = 4;
}

// SoftwareFeatures represents a set of software features available for the
// image being tested.
message SoftwareFeatures {
  repeated string available = 1;
  repeated string unavailable = 2;
}

// HardwareFeatures represents a set of hardware features available for the
// device model being tested.
message HardwareFeatures {
  chromiumos.config.api.HardwareFeatures hardware_features = 1;
  device.Config deprecated_device_config = 2;
}
